--- a/MyMobilesafe/app/src/main/res/values/strings.xml
+++ b/MyMobilesafe/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyMobilesafe</string>
+    <string name="sample_device_admin">设置锁屏</string>
+    <string name="sample_device_admin_description">一键锁屏</string>
+    <string name="security_notice">防盗设置未全部打开！有安全风险！</string>
 </resources>
